--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <section id="secccion01">
+    <section id="seccion01">
         <article>
             <img src="img/slide2.jpg" alt="slide">
         </article>
@@ -56,7 +56,7 @@
         </article>
         <article>
             <img src="img/separador.jpg" alt="separador">
-            <span>Un video</span>
+            <span class="otraSeccion nito">Un video</span>
             <br>
             <img src="img/video.jpg" alt="video">
         </article>
@@ -64,7 +64,7 @@
 
     <footer>
         <article>
-            <span>Última búsqueda</span>
+            <span class="unaSeccion nito">Última búsqueda</span>
         </article>
         <article>
             &nbsp;
